fix(Sidebar Toggler): Fixes sidebar toggle being cut off on chat screen

--- a/components/tailored/core/sidebar/Sidebar.less
+++ b/components/tailored/core/sidebar/Sidebar.less
@@ -23,7 +23,7 @@
 
     .toggle-sidebar {
       position: absolute;
-      z-index: @base-z-index;
+      z-index: @base-z-index + 10;
       top: @normal-spacing * 2.5;
       right: @normal-spacing;
       color: @primary-color;
