--- a/components/tailored/core/statusbar/Statusbar.less
+++ b/components/tailored/core/statusbar/Statusbar.less
@@ -6,6 +6,7 @@
   padding: 0 @normal-spacing;
   min-width: 500px;
   user-select: none;
+  pointer-events: none;
 
   .vertical-divider {
     height: 30px;
@@ -26,6 +27,7 @@
     font-size: @icon-size;
     padding: @light-spacing;
     box-shadow: @ui-shadow;
+    pointer-events: all;
 
     .input-wrap {
       margin-left: @normal-spacing !important;
