--- a/layouts/server/Server.less
+++ b/layouts/server/Server.less
@@ -101,7 +101,6 @@
     }
     #sidebar .toggle-sidebar {
       right: -2rem;
-      z-index: @base-z-index;
       top: 1.8rem;
     }
     #statusbar {
